# linux-system-monitor

./: CMakeLists.txt  README.md  asd.c  cpuusage.c  main  main.c  test
inc/: cpuusage.h  gui.h
src/: cpuusage.c  gui.c  main.c
